card, home, routig, bootstrap.

--- a/src/app/card-details/card-shell/card-shell.component.html
+++ b/src/app/card-details/card-shell/card-shell.component.html
@@ -4,8 +4,8 @@
                        [card]="card$ | async"
                        [errorMessage]="errorMessage$ | async"
                        
-                       (initializeNewProduct)="newProduct()"
                        ></pm-card-list> -->
+    <div>{{card$ | async}}</div>
     </div>
     <div class='col-md-8'>
       <pm-card-edit 
