--- a/src/app/home/menu.component.html
+++ b/src/app/home/menu.component.html
@@ -5,7 +5,7 @@
             <li class="nav-item"
                 routerLinkActive="active">
                 <a class="nav-link"
-                   routerLink=''>Home</a>
+                   routerLink='/home'>Home</a>
             </li>
             <li class="nav-item"
                 routerLinkActive="active">
