toast for success and remove/added comments

--- a/src/app/card-details/card-details.component.html
+++ b/src/app/card-details/card-details.component.html
@@ -128,3 +128,7 @@
      class="alert alert-danger">
   Error: {{ errorMessage }}
 </div>
+<div *ngIf="successMessage"
+     class="alert alert-success">
+  Success: {{ successMessage }}
+</div>
