--- a/src/app/home/menu.component.html
+++ b/src/app/home/menu.component.html
@@ -10,7 +10,7 @@
             <li class="nav-item"
                 routerLinkActive="active">
                 <a class="nav-link"
-                   routerLink='/card'>Card Details</a>
+                   routerLink='/card'>Add Card Detail</a>
             </li>
         </ul>  
     </div>
